css and html for index

--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -1,7 +1,6 @@
-$back-color: #F9F9F9;
-$base-color: #89B337;
-$bar-color: #F4F4F4;
-$border-color: #EEEEEE;
+$back-color: #2c4357;
+$second-color: #375269;
+$border-color: #24394c;
 $section-title-color: #41639E;
 $section-title-border: #6E943D;
 $gray: #9E9E9E;
@@ -49,7 +48,7 @@ html, body {
 	background-color: #F9F9F9;
 	padding: 0;
 	margin: 0;
-	font-family: WMitra;
+	font-family: WYekan;
 	font-size: 18px;
 	direction: rtl;
 	font-align: right;
