--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -33,6 +33,14 @@ header {
 				display: block;
 				padding-top: 55px;
 			}
+			&:hover {
+				a {
+					color: #71889D;
+				}
+				i {
+					color: #fff;
+				}
+			}
 		}
 	}
 	.header-bottom {
@@ -52,6 +60,9 @@ header {
 				border-radius: 50%;
 				text-align: center;
 				color: white;
+				&:hover {
+					background: #2c4357;
+				}
 			}
 		}
 		.ticker-container {
@@ -59,7 +70,7 @@ header {
 		}
 	}
 }
-.top-ads {
+#top-ads {
 	height: 80px;
 	.wide-ad {
 		float: right;
@@ -74,6 +85,184 @@ header {
 		&:last-of-type {
 			padding-left: 0;
 			padding-right: 20px;
+		}
+	}
+}
+#signup-bar {
+	margin: 20px auto;
+	.container {
+		background: #e7f0f9;
+		height: 50px;
+		border-radius: 10px;
+		padding: 0 0 0 5px;
+		span {
+			background-image: url(img/button-bg1.png) !important;
+			background-position: left top;
+			background-repeat: no-repeat;
+			border-radius: 60px 5px 5px;
+			color: white;
+			font-size: 1.7em;
+			font-family: BKoodak;
+			line-height: 1.1em;
+			text-shadow: 1px 1px 0px #676767;
+			position: relative;
+			width: 10.33rem;
+			margin-left: 13px;
+		}
+		p {
+			text-align: center;
+			color: #75307b;
+			font-size: 1.5em;
+			line-height: 1.28em;
+			text-shadow: 1px 1px 0 #fff;
+		}
+		.register {
+			background: #58af58;
+			border: 3px solid #2e9f2e;
+			border-radius: 8px;
+			color: white;
+			text-shadow: 1px 1px 0 #3d7a3d;
+			text-align: center;
+			font-size: 1.5em;
+			font-family: BKoodak;
+			line-height: 0.7em;
+			margin: 5px 0 0 0;
+			&:hover {
+				background: #2e9f2e;
+				border: 3px solid #58af58;
+			}
+		}	
+	}
+}
+#body {
+	.main-container {
+		background-image: url(img/main-bg.jpg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		float: right;
+		width: 100%;
+		.top-text {
+			color: #c03941;
+			font-size: 2em;
+			font-family: BKoodak;
+			text-align: center;
+			padding-top: 15px;
+			width: 600px;
+			margin: 0 auto;
+			i {
+				color: #b83038;
+				padding-left: 10px;
+			}
+		}
+		.filetypes {
+			margin: 30px 45px 20px;
+			float: right;
+			width: 500px;
+			ul {
+				text-align: center;
+				margin: 0 auto;
+				width: 515px;
+				li {
+					float: right;
+					display: inline-block;
+					i {
+						font-size: 5em;
+						padding-left: 25px;
+						color: #a1b6c2;
+						text-shadow: 2px 0 1px #fff;
+					}
+					&:nth-of-type(even) {
+						padding-top: 30px;
+					}
+				}
+				.upload-via-link {
+					background: #ced4d8;
+					color: #2c4357;
+					padding: 2px 12px;
+					border-radius: 5px;
+					float: left;
+					margin: 30px 0 -10px 15px;
+				}
+			}
+		}
+		.form {
+			text-align: center;
+			width: 500px;
+			margin: 0 45px 10px;
+			height: 50px;
+			float: right;
+			position: relative;
+			input[type="file"]{
+			    z-index: 999;
+			    line-height: 0;
+			    font-size: 50px;
+			    position: absolute;
+			    opacity: 0;
+			    filter: alpha(opacity = 0);-ms-filter: "alpha(opacity=0)";
+			    cursor: pointer;
+			    margin: 0;
+			    padding:0;
+			    left:0;
+			}
+			i.fa-times-circle-o {
+				content: "\f05c";
+				font-family: fontawesome;
+				position: absolute;
+				color: #c03941;
+				right: -35px;
+				top: 13px;
+				font-size: 1.5em;
+				cursor: pointer;
+				visibility: hidden;
+				opacity: 0;
+			}
+			&:hover {
+				i.fa-times-circle-o {
+					visibility: visible;
+					opacity: 0.8;
+				}
+			}
+		}
+		.add-photo-btn{
+			position: relative;
+			overflow: hidden;
+			cursor: pointer;
+			text-align: center;
+			background-color: #333;
+			color: #fff;
+			display: block;
+			width: 100px;
+			height: 50px;
+			font-size: 1.12em;
+			line-height: 2.5em;
+			float: left;
+			border-radius: 0 5px 5px 0;
+		}
+		input#path {
+			float:left;
+			height: 50px;
+			border: 1px solid #ccc;
+			border-right: none;
+			border-radius: 5px 0 0 5px;
+			width: 400px;
+			text-align: left;
+			font-family: sans-serif;
+			font-size: 1em;
+			padding: 0 10px;
+		}
+		.add-upload {
+			width: 500px;
+			margin: 20px 45px;
+			float: right;
+			i {
+				color: #2c4357;		
+				padding-left:5px;		
+				cursor: pointer;
+			}
+			.add-upload-input {
+				color: #2c4357;
+				cursor: pointer;
+			}
 		}
 	}
 }
