--- a/scss/lemonade/_grid.scss
+++ b/scss/lemonade/_grid.scss
@@ -46,6 +46,9 @@
 }
 
 // Create grid widths
+.bit-20 {
+  width: 20%;
+}
 .bit-25 {
   width: 25%;
 }
@@ -55,8 +58,13 @@
 .bit-50 {
   width: 50%;
 }
-.bit-70 {
-  width: 70%;
+.bit-60 {
+  width: 60%;
+}
+.bit-600 {
+  width: 600px;
+  margin: 0 auto;
+  float: initial !important;
 }
 .bit-75 {
   width: 75%;
